# ztsdb

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  COPYING  Dockerfile  Makefile  README.md  centos7_install.org  doxygen_config
Rtests/: CMakeLists.txt  Makefile  RUnitMini.R  comm_setup_teardown.R  runit_align.R  runit_args.R  runit_array_subset.R  runit_arrays.R  runit_binds.R  runit_binops.R  runit_binops_inplace.R  runit_c.R  runit_comm.R  runit_control.R  runit_copying.R  runit_csv.R  runit_env.R  runit_eq.R  runit_escape.R  runit_floor_ceiling.R  runit_function.R  runit_head_tail.R  runit_interval.R  runit_lapply.R  runit_list.R  runit_load.R  runit_op_zts.R  runit_ordered.R  runit_period.R  runit_reference.R  runit_roll.R  runit_scoping.R  runit_seq.R  runit_set.R  runit_system.R  runit_time.R  runit_transpose.R  runit_unops.R  runit_zts.R  runit_zts_resize.R  (+3 more)
cmake/Modules/: FindLibCRPCUT.cmake  FindLibDOUBLE_CONVERSION.cmake
examples/: README.md  market_open_close.R
examples/futures-join/: futures-join_query.R  futures-join_ztsdb.R
examples/futures-join/data/: expiration.csv
examples/grid-align/: grid-align_query.R  grid-align_ztsdb.R
examples/market-open-close/: market-open-close.R  market-open-close_ztsdb.R
examples/mean-minute/: mean-minute.R  mean-minute_ztsdb.R
examples/price-adjustment/: price-adjustment_query.R  price-adjustment_ztsdb.R
examples/price-adjustment/data/: AAPL.csv  MSFT.csv
examples/price-adjustment/price-adjustment-data/: XOM.csv  aapl_div.csv  aapl_price.csv  aapl_split.csv
itests/append/: CMakeLists.txt  Makefile  README.md  append.cpp
itests/client/: CMakeLists.txt  Makefile  client.cpp
itests/simple_append/: CMakeLists.txt  Makefile  simple_append.cpp
itests/simple_append_c/: CMakeLists.txt  Makefile  simple_append.c
lib/: Makefile  sotest.cpp
shlib/: CMakeLists.txt  Makefile
shlib_client/: CMakeLists.txt  Makefile
src/: CMakeLists.txt  Makefile  Makefile.header  Makefile.rules  align_funcs.hpp  allocator.hpp  allocator_factory.hpp  anf.cpp  anf.hpp  api.hpp  array.cpp  array.hpp  array_ops.hpp  ast.cpp  ast.hpp  base_funcs.cpp  base_funcs.hpp  base_funcs_array.cpp  base_funcs_array_idx.cpp  base_funcs_ic.cpp  base_funcs_math.cpp  base_funcs_roll.cpp  base_funcs_set.cpp  base_types.cpp  base_types.hpp  cmdline.ggo  config.cpp  config.hpp  config_ctx.cpp  config_ctx.hpp  conversion_funcs.cpp  conversion_funcs.hpp  core.org  cow_ptr.cpp  cow_ptr.hpp  csv.cpp  csv.hpp  display.cpp  display.hpp  dname.cpp  (+62 more)
src/config_parser/: CMakeLists.txt  Makefile  cfglexer.l  cfgparser.y
src/cutest/: cutest.h
src/demo/: mean-minute.R  price-adjustment.R  startup.R  zts.R
src/hinnant_date/: date.h
src/juice/: variant.hpp  variant_binary.hpp
src/main_parser/: CMakeLists.txt  Makefile  lexer.l  location.hpp  parser.y  position.hpp
src/shlib/: CMakeLists.txt  Makefile
src/timezone/: interval.hpp  localtime.cpp  private.h  tz.hpp  vector_set_time.hpp  zone.cpp  zone.hpp  ztime.cpp  ztime.hpp  ztime_vector.cpp  ztime_vector.hpp
tests/: CMakeList.Header.txt  Makefile.header  Makefile.target  Makefile.target.cfgparser  Makefile.target.parser  interp_setup.hpp  utils.hpp  utils_dtime.hpp
tests/align/: CMakeLists.txt  Makefile  test.cpp
tests/anf/: CMakeLists.txt  Makefile  test.cpp
tests/array/: CMakeLists.txt  Makefile  test.cpp
tests/array_bool/: CMakeLists.txt  test.cpp
tests/array_time/: CMakeLists.txt  Makefile  test.cpp
tests/ast/: CMakeLists.txt  Makefile  test.cpp
tests/binds/: CMakeLists.txt  Makefile  test.cpp
tests/comm/: CMakeLists.txt  Makefile  test.cpp
tests/comm_append/: CMakeLists.txt  Makefile  test.cpp
tests/config/: CMakeLists.txt  Makefile  test.cpp
tests/control/: CMakeLists.txt  Makefile  test.cpp
tests/cow_ptr/: CMakeLists.txt  Makefile  test.cpp
tests/csv/: CMakeLists.txt  Makefile  test.cpp
tests/display/: CMakeLists.txt  Makefile  test.cpp
tests/duration/: CMakeLists.txt  Makefile  test.cpp
tests/encode/: CMakeLists.txt  Makefile  test.cpp
tests/interp/: CMakeLists.txt  Makefile  test.cpp
tests/interp_error/: CMakeLists.txt  Makefile  test.cpp
tests/interp_time/: CMakeLists.txt  Makefile  test.cpp
tests/mmap/: CMakeLists.txt  Makefile  test.cpp
tests/parser/: CMakeLists.txt  Makefile  test.cpp
tests/period/: CMakeLists.txt  Makefile  test.cpp
tests/time/: CMakeLists.txt  Makefile  test.cpp
tests/vector/: CMakeLists.txt  Makefile  test.cpp
tests/vector_bool/: CMakeLists.txt  test.cpp
tests/vector_set/: CMakeLists.txt  Makefile  test.cpp
tests/zstring/: CMakeLists.txt  Makefile  test.cpp
tests/zts/: CMakeLists.txt  Makefile  test.cpp
